# Aera-AIPromptImprover

./: .gitignore  LICENSE  README.md  start.ps1
.github/: copilot-instructions.md
backend/: .env.example  .flake8  README.md  pyproject.toml  pytest.ini  requirements.txt
backend/src/: __init__.py  config.py  main.py
backend/src/api/: __init__.py  app.py  routes.py  websocket.py
backend/src/libs/: __init__.py
backend/src/libs/prompt_analyzer/: __init__.py  analyzer.py  cli.py
backend/src/libs/prompt_analyzer/tests/: __init__.py  test_analyzer.py  test_cli.py
backend/src/libs/suggestion_engine/: __init__.py  cli.py  engine.py  groq_provider.py  providers.py
backend/src/libs/suggestion_engine/tests/: __init__.py  test_engine.py  test_groq_fallback_provider.py
backend/src/models/: __init__.py  converters.py  schemas.py
backend/src/services/: __init__.py
backend/tests/api/: __init__.py  test_contracts.py
backend/tests/integration/: test_workflows.py
backend/tests/unit/: test_converters.py  test_models.py
backend/tests/websocket/: test_websocket.py
desktop/: .gitignore  README.md  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: main.rs
frontend/: .eslintrc.js  .gitignore  .prettierrc.json  README.md  index.html  jest.config.cjs  jest.config.js  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: DebugPanel.css  DebugPanel.jsx  ModelInfo.css  ModelInfo.jsx
frontend/src/components/editor/: Highlighter.css  Highlighter.jsx  PromptEditor.css  PromptEditor.jsx
frontend/src/components/planner/: CursorPlanPanel.css  CursorPlanPanel.jsx
frontend/src/components/tooltip/: SuggestionTooltip.css  SuggestionTooltip.jsx
frontend/tests/: setup.js
frontend/tests/unit/components/: PromptEditor.test.js
specs/: 002-system-wide-service.md
system-service/: AeraBackendClient.cs  AeraSystemService.csproj  AeraTrayApplication.cs  BROWSER-DEBUG.md  DebugProgram.cs  GlobalTextCapture.cs  IntegrationTestRunner.cs  Interfaces.cs  Program.cs  README-NEW.md  README.md  TestProgram.cs  TextAnalysisService.cs  TextOverlayManager.cs  app.manifest  test-build.bat
